cluster/apps/cattle-system/rancher/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "rancher"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cow"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "rancher.${SECRET_DOMAIN}"
      secretName: "rancher-tls"
  rules:
    - host: "rancher.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 443
